[package]
name = "bookish-octo"
version = "0.1.0"
edition = "2021"
description = "CLI app to download book cover images"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
