[package]
name = "bookish-octo"
authors = ["Keith Yeung"]
version = "0.1.0"
edition = "2021"
description = "CLI app to download book cover images"

[dependencies]
anyhow = "1.0.79"
blockfrost = "1.0.1"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
